force-app/main/default/objects/Events__c/fields/Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events5</relationshipName>
    <type>Lookup</type>
</CustomField>