force-app/main/default/objects/Events__c/fields/Sobha_sales_team_2__c.field-meta.xml
<CustomField>
    <fullName>Sobha_sales_team_2__c</fullName>
    <label>Sobha sales team 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>