force-app/main/default/objects/Events__c/fields/Start_Time_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_of_the_Event__c</fullName>
    <label>Start time</label>
    <type>Time</type>
</CustomField>