force-app/main/default/objects/Events__c/fields/Target_Audience_Business_Trip__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Business_Trip__c</fullName>
    <label>Target Audience Business Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>