force-app/main/default/objects/Events__c/fields/Text_Old_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Text_Old_Start_Time__c</fullName>
    <formula>TEXT(Old_Start_Time_Of_Event__c)+TEXT(Old_End_Time_Of_Event__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Old Start Time</label>
    <type>Text</type>
</CustomField>