force-app/main/default/objects/Events__c/fields/Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price__c</fullName>
    <label>Total Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>