force-app/main/default/objects/Events__c/fields/Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost__c</fullName>
    <label>Travel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>