force-app/main/default/objects/Events__c/fields/Type_Of_Road_Show__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Road_Show__c</fullName>
    <label>Type Of Road Show</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Roadshow</fullName>
            </value>
            <value>
                <fullName>Channel Partner Roadshow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>