force-app/main/default/objects/Events__c/fields/User_2__c.field-meta.xml
<CustomField>
    <fullName>User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eventsp6Pl</relationshipName>
    <type>Lookup</type>
</CustomField>