force-app/main/default/objects/Events__c/fields/User_3__c.field-meta.xml
<CustomField>
    <fullName>User_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eventsp6Pv</relationshipName>
    <type>Lookup</type>
</CustomField>