force-app/main/default/objects/Events__c/fields/Venue_cost_in_Local_currency_in_AED__c.field-meta.xml
<CustomField>
    <fullName>Venue_cost_in_Local_currency_in_AED__c</fullName>
    <label>Venue cost in Local currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>