force-app/main/default/objects/Events__c/fields/Venue_Hotel_Name_Name_of_Event_Hall__c.field-meta.xml
<CustomField>
    <fullName>Venue_Hotel_Name_Name_of_Event_Hall__c</fullName>
    <label>HOTEL1:</label>
    <type>TextArea</type>
</CustomField>