force-app/main/default/objects/Events__c/fields/Venue_Video_Shoot__c.field-meta.xml
<CustomField>
    <fullName>Venue_Video_Shoot__c</fullName>
    <label>Venue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show Apartment</fullName>
            </value>
            <value>
                <fullName>Sales Gallery</fullName>
            </value>
            <value>
                <fullName>Event Hall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>