force-app/main/default/objects/Events__c/fields/Visit_numbers__c.field-meta.xml
<CustomField>
    <fullName>Visit_numbers__c</fullName>
    <label>No. of visits/meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>