force-app/main/default/objects/Events__c/recordTypes/Brokers_Event.recordType-meta.xml
<RecordType>
    <fullName>Brokers_Event</fullName>
    <active>true</active>
    <label>Brokers Event</label>
</RecordType>