force-app/main/default/objects/Events__c/recordTypes/Brokers_Training.recordType-meta.xml
<RecordType>
    <fullName>Brokers_Training</fullName>
    <active>true</active>
    <label>Brokers Training</label>
</RecordType>