force-app/main/default/objects/Events__c/recordTypes/Business_Trip.recordType-meta.xml
<RecordType>
    <fullName>Business_Trip</fullName>
    <active>true</active>
    <description>SOB-1739</description>
    <label>Business Trip</label>
</RecordType>