force-app/main/default/objects/Events__c/recordTypes/Open_Houses.recordType-meta.xml
<RecordType>
    <fullName>Open_Houses</fullName>
    <active>true</active>
    <label>Open Houses</label>
</RecordType>