force-app/main/default/objects/Events__c/recordTypes/Road_Shows.recordType-meta.xml
<RecordType>
    <fullName>Road_Shows</fullName>
    <active>true</active>
    <label>Road Shows</label>
</RecordType>