force-app/main/default/objects/Events__c/recordTypes/Video_Shoot.recordType-meta.xml
<RecordType>
    <fullName>Video_Shoot</fullName>
    <active>true</active>
    <label>Video Shoot</label>
</RecordType>