force-app/main/default/objects/Events__c/validationRules/City_2_City_3_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>City_2_City_3_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND (OR(IsNew(),isChanged(Trip_Plan__c)),IsPickval(Trip_Plan__c,&apos;Multiple City&apos;),OR(City_2__c == null ,City_3__c == null) )</errorConditionFormula>
    <errorMessage>For Multiple city trip - City 1,2,3 are mandatory.</errorMessage>
</ValidationRule>