force-app/main/default/objects/Events__c/validationRules/CP_or_SC_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_or_SC_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Bypass_Validation_Rule__c == false, OR(RecordType.Name == &apos;Brokers Training&apos;, RecordType.Name == &apos;Open Houses&apos;,RecordType.Name == &apos;Road Shows&apos;,RecordType.Name == &apos;Video Shoot&apos;), OR(AND( Channel_Partner__c == null , Sobha_Connect__c == null), AND( Channel_Partner__c != null , Sobha_Connect__c != null)),And(RecordType.Name == &apos;Road Shows&apos;,NOT(ISPICKVAL(Type_Of_Road_Show__c  , &apos;Digital Roadshow&apos;)) ))</errorConditionFormula>
    <errorMessage>Either SC or CP Partner is required for Broker Training , Open Houses and Road Shows</errorMessage>
</ValidationRule>