force-app/main/default/objects/Events__c/validationRules/CP_OR_SC_IS_Mandatory_Video_Shoot.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_OR_SC_IS_Mandatory_Video_Shoot</fullName>
    <active>true</active>
    <errorConditionFormula>AND (RecordType.Name == &apos;Video Shoot&apos;, Channel_Partner__c == null, Sobha_Connect__c = null)</errorConditionFormula>
    <errorMessage>CP or SC is mandatory for video shoot.</errorMessage>
</ValidationRule>