force-app/main/default/objects/Events__c/validationRules/create_date_15D_VideoShoot.validationRule-meta.xml
<ValidationRule>
    <fullName>create_date_15D_VideoShoot</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Bypass_Validation_Rule__c == false,  OR($User.Username != &apos;maria.lobo@sobharealty.com&apos;,$User.Username != &apos;	shailesh.dsouza@sobharealty.com&apos;), OR(RecordType.Name == &apos;Video Shoot&apos;),
Date_Of_Event__c &lt;=  today() + 3, OR(ISNew(),IsChanged(Date_Of_Event__c)))</errorConditionFormula>
    <errorDisplayField>Date_Of_Event__c</errorDisplayField>
    <errorMessage>ERF should be raised before 3 days of the event starting date</errorMessage>
</ValidationRule>