force-app/main/default/objects/Events__c/validationRules/create_date_should_not_be_more_than_21D.validationRule-meta.xml
<ValidationRule>
    <fullName>create_date_should_not_be_more_than_21D</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Bypass_Validation_Rule__c == false,  $User.Username != &apos;maria.lobo@sobharealty.com&apos;,$User.Username != &apos;shailesh.dsouza@sobharealty.com&apos;, OR(RecordType.Name == &apos;Brokers Event&apos;),
Date_Of_Event__c &lt;=  today() + 21, OR(ISNew(),IsChanged(Date_Of_Event__c)))</errorConditionFormula>
    <errorDisplayField>Date_Of_Event__c</errorDisplayField>
    <errorMessage>ERF should be raised before 21 days of the event starting date</errorMessage>
</ValidationRule>