force-app/main/default/objects/Events__c/validationRules/End_Time_of_Event_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_of_Event_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(End_Time_of_the_Event__c  != null , ((End_Time_of_the_Event__c  - Start_Time_of_the_Event__c  ) / 3600000) == 0 )</errorConditionFormula>
    <errorDisplayField>End_Time_of_the_Event__c</errorDisplayField>
    <errorMessage>End Time Of Event should be greater then start time of event</errorMessage>
</ValidationRule>