force-app/main/default/objects/Events__c/validationRules/Last_date_of_CRM_meeting_with_Broker.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_date_of_CRM_meeting_with_Broker</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Bypass_Validation_Rule__c == false,Last_date_of_CRM_meeting_with_Broker__c  &gt; Today())</errorConditionFormula>
    <errorDisplayField>Last_date_of_CRM_meeting_with_Broker__c</errorDisplayField>
    <errorMessage>Date cannot be in future.</errorMessage>
</ValidationRule>