force-app/main/default/objects/Events__c/validationRules/Sales_Manager_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Manager_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>And(Bypass_Validation_Rule__c == false,IsNew(), OR(Not(CONTAINS($UserRole.Name ,&apos;Sales Manager&apos;) ), Isblank($User.UserRoleId) ), isblank(Sales_Manager__c),
AND($Profile.Name != &apos;Customer Community Login&apos;,
$Profile.Name != &apos;System Administrator&apos;,$Profile.Name !=&apos;CP Profile&apos;) )</errorConditionFormula>
    <errorDisplayField>Sales_Manager__c</errorDisplayField>
    <errorMessage>Sales Manager is required</errorMessage>
</ValidationRule>