force-app/main/default/objects/Events__c/validationRules/Start_Date_can_not_be_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_can_not_be_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Bypass_Validation_Rule__c == false,  $User.Username != &apos;maria.lobo@sobharealty.com&apos;, Date_Of_Event__c &lt; today(), OR(ISNew(),IsChanged(Date_Of_Event__c)))</errorConditionFormula>
    <errorDisplayField>Date_Of_Event__c</errorDisplayField>
    <errorMessage>Start Date can not be in past</errorMessage>
</ValidationRule>