force-app/main/default/objects/Events__c/listViews/Events_Admin_Approval_Events.listView-meta.xml
<ListView>
    <fullName>Events_Admin_Approval_Events</fullName>
    <filterScope>Queue</filterScope>
    <label>Events Admin Approval</label>
    <queue>Events_Admin_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>