force-app/main/default/objects/Events__c/listViews/MER_Pending_For_Approval.listView-meta.xml
<ListView>
    <fullName>MER_Pending_For_Approval</fullName>
    <columns>NAME</columns>
    <columns>City_Country__c</columns>
    <columns>Country__c</columns>
    <columns>Venue_cost_in_AED__c</columns>
    <columns>Venue_cost_in_Local_currency_in_AED__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Channel_Relationship_Manager__c</columns>
    <columns>Final_Venue_Selected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Approved_status__c</field>
        <operation>equals</operation>
        <value>Venue Cost Pending Approval - CMO</value>
    </filters>
    <label>Final Cost_Pending For Approval</label>
    <sharedTo>
        <role>Head_Channel_Relations</role>
    </sharedTo>
</ListView>