force-app/main/default/objects/Events__c/listViews/My_Team_Events.listView-meta.xml
<ListView>
    <fullName>My_Team_Events</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Date_Of_Event__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>crm,Alder,skesh,Ashok</value>
    </filters>
    <label>My Team Events</label>
    <sharedTo>
        <role>CRm_TL_2</role>
    </sharedTo>
</ListView>