force-app/main/default/objects/Events__c/listViews/Open_Houses.listView-meta.xml
<ListView>
    <fullName>Open_Houses</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>Event_Approved_status__c</columns>
    <columns>Event_Approval_status__c</columns>
    <columns>Date_Of_Event__c</columns>
    <columns>End_Date_Of_Event__c</columns>
    <columns>Country__c</columns>
    <columns>City_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type_Of_Road_Show__c</columns>
    <columns>Type_of_Open_House__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Events__c.Open_Houses,Events__c.Road_Shows</value>
    </filters>
    <filters>
        <field>Type_of_Open_House__c</field>
        <operation>equals</operation>
        <value>Direct Open House</value>
    </filters>
    <filters>
        <field>Type_Of_Road_Show__c</field>
        <operation>equals</operation>
        <value>Digital Roadshow</value>
    </filters>
    <label>Open House / Roadshow</label>
    <sharedTo>
        <role>Brand_Manager</role>
        <role>Senior_Executive_Digital_Marketing</role>
    </sharedTo>
</ListView>