force-app/main/default/objects/Events__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Approved_status__c</field>
        <operation>equals</operation>
        <value>Pending With CHRM manager TL</value>
    </filters>
    <label>Pending Approval</label>
    <sharedTo>
        <role>CRM_TL3</role>
        <role>CRM_TL4</role>
        <role>CRM_TL_1</role>
        <role>CRm_TL_2</role>
    </sharedTo>
</ListView>