force-app/main/default/objects/Events__c/listViews/Pending_for_Hotel_finilization.listView-meta.xml
<ListView>
    <fullName>Pending_for_Hotel_finilization</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Campaign_Code__c</columns>
    <columns>NAME</columns>
    <columns>City_Country__c</columns>
    <columns>Country__c</columns>
    <columns>Date_Of_Event__c</columns>
    <columns>End_Date_Of_Event__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Channel_Relationship_Manager__c</columns>
    <columns>No_of_Site_visits_In_Last__c</columns>
    <columns>Qualified_Sales_Value__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_VP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Approved_status__c</field>
        <operation>equals</operation>
        <value>Pending With Khodr El Masri/Invoice submitted by Khodr El Masri</value>
    </filters>
    <label>Pending for- Hotel finalization</label>
</ListView>