force-app/main/default/objects/Events__c/listViews/Pending_with_CHRM_Manager.listView-meta.xml
<ListView>
    <fullName>Pending_with_CHRM_Manager</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>City_Country__c</columns>
    <columns>Country__c</columns>
    <columns>Date_Of_Event__c</columns>
    <columns>End_Date_Of_Event__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Channel_Relationship_Manager__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_VP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Approved_status__c</field>
        <operation>equals</operation>
        <value>Pending With CHRM manager TL</value>
    </filters>
    <label>Pending with CHRM Manager</label>
    <sharedTo>
        <role>CRM_TL3</role>
        <role>CRM_TL4</role>
        <role>CRm_TL_2</role>
        <role>Head_Digital_Marketing</role>
    </sharedTo>
</ListView>