force-app/main/default/objects/Events__c/listViews/Pending_with_Swapnil.listView-meta.xml
<ListView>
    <fullName>Pending_with_Swapnil</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Approved_status__c</field>
        <operation>equals</operation>
        <value>Pending with Swapnil</value>
    </filters>
    <label>Pending with Swapnil</label>
    <sharedTo>
        <group>Swapnil</group>
    </sharedTo>
</ListView>