force-app/main/default/objects/Events__c/listViews/Portal_Events.listView-meta.xml
<ListView>
    <fullName>Portal_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_Broker_Portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Portal Events</label>
</ListView>